examples/test/testpolicy15029.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15029
  namespace: namespace149
spec:
  podSelector:
    matchLabels:
      key22: value24
      key3: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value7
          key28: value0
          key21: value8
      podSelector:
        matchLabels:
          key48: value43
